--- a/gallery.html
+++ b/gallery.html
@@ -89,6 +89,50 @@
                         <span style="--i:8;"><img src="img/gallery12.jpeg" alt="not found"></span>
                     </div>
                 </div>
+                <div class="container__">
+                    <div class="scope">
+                        <span style="--i:1;"><img src="img/1.jpg" alt="not found"></span>
+                        <span style="--i:2;"><img src="img/2.jpg" alt="not found"></span>
+                        <span style="--i:3;"><img src="img/3.jpg" alt="not found"></span>
+                        <span style="--i:4;"><img src="img/4.jpg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery1.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery2.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery3.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery4.jpeg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery5.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery6.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery7.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery8.jpeg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery9.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery10.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery11.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery12.jpeg" alt="not found"></span>
+                    </div>
+                </div>
+            </section>
+
+
+            <section>
+                <div class="container__">
+                    <div class="scope">
+                        <span style="--i:1;"><img src="img/1.jpg" alt="not found"></span>
+                        <span style="--i:2;"><img src="img/2.jpg" alt="not found"></span>
+                        <span style="--i:3;"><img src="img/3.jpg" alt="not found"></span>
+                        <span style="--i:4;"><img src="img/4.jpg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery1.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery2.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery3.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery4.jpeg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery5.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery6.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery7.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery8.jpeg" alt="not found"></span>
+                        <span style="--i:5;"><img src="img/gallery9.jpeg" alt="not found"></span>
+                        <span style="--i:6;"><img src="img/gallery10.jpeg" alt="not found"></span>
+                        <span style="--i:7;"><img src="img/gallery11.jpeg" alt="not found"></span>
+                        <span style="--i:8;"><img src="img/gallery12.jpeg" alt="not found"></span>
+                    </div>
+                </div>
             </section>
 
 
