--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <section class="ceo">
                 <div class="ceo__main">
                     <div class="detail">
-                        <h1><span>Hi, It's Me</span> <br> I'm <span style="color:#244D61;">Alex</span></h1>
+                        <h1><span>Hi, It's Me</span> <br> I'm <span style="color:#2c724f;">Feyi Papa</span></h1>
                         <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry. </p>
                         <div class="social">
                             <a href="#"><i class="bi bi-github"></i></a>
